--- a/css/main.css
+++ b/css/main.css
@@ -1140,6 +1140,18 @@ a.nowrap {
   .top-banner {
     height: 400px; } }
 
+@media screen and (max-height: 320px) and (max-width: 568px) {
+  .top-banner {
+    height: 110px; } }
+
+@media screen and (max-height: 360px) and (max-width: 640px) {
+  .top-banner {
+    height: 100px; } }
+
+@media screen and (max-height: 375px) and (max-width: 667px) {
+  .top-banner {
+    height: 100px; } }
+
 .hero {
   background-image: url(/img/hero_mobile_small.jpg);
   background-repeat: no-repeat;
@@ -1202,6 +1214,21 @@ a.nowrap {
     height: 1800px;
     margin-top: -240px; } }
 
+@media screen and (max-height: 320px) and (max-width: 568px) {
+  .hero {
+    height: 430px;
+    margin-top: -45px; } }
+
+@media screen and (max-height: 360px) and (max-width: 640px) {
+  .hero {
+    height: 490px;
+    margin-top: -50px; } }
+
+@media screen and (max-height: 375px) and (max-width: 667px) {
+  .hero {
+    height: 510px;
+    margin-top: -50px; } }
+
 .wave {
   width: 100%;
   height: auto;
@@ -1241,6 +1268,10 @@ a.nowrap {
   .wave {
     margin-top: 1900px; } }
 
+@media screen and (max-height: 375px) and (max-width: 667px) {
+  .wave {
+    margin-top: 390px; } }
+
 .content-marg {
   margin-top: -90px;
   z-index: 9995;
@@ -1258,6 +1289,18 @@ a.nowrap {
 @media screen and (min-width: 1920px) {
   .content-marg {
     margin-top: -560px; } }
+
+@media screen and (max-height: 375px) and (max-width: 667px) {
+  .content-marg {
+    margin-top: -200px; } }
+
+@media screen and (max-height: 360px) and (max-width: 640px) {
+  .content-marg {
+    margin-top: -180px; } }
+
+@media screen and (max-height: 320px) and (max-width: 568px) {
+  .content-marg {
+    margin-top: -160px; } }
 
 .back-white {
   background-color: white !important; }
@@ -1311,6 +1354,18 @@ body {
   .apply-pos {
     width: 60%; } }
 
+@media screen and (max-height: 375px) and (max-width: 667px) {
+  .apply-pos {
+    width: 40%; } }
+
+@media screen and (max-height: 360px) and (max-width: 640px) {
+  .apply-pos {
+    width: 40%; } }
+
+@media screen and (max-height: 320px) and (max-width: 568px) {
+  .apply-pos {
+    width: 40%; } }
+
 .no-scroll {
   overflow-y: hidden; }
 
@@ -1332,6 +1387,18 @@ body {
 @media screen and (min-width: 1200px) {
   .more-pos {
     width: 60%; } }
+
+@media screen and (max-height: 375px) and (max-width: 667px) {
+  .more-pos {
+    width: 40%; } }
+
+@media screen and (max-height: 360px) and (max-width: 640px) {
+  .more-pos {
+    width: 40%; } }
+
+@media screen and (max-height: 320px) and (max-width: 568px) {
+  .more-pos {
+    width: 40%; } }
 
 .more-z {
   z-index: 9995; }
@@ -1360,6 +1427,18 @@ body {
   .phone {
     width: 8%; } }
 
+@media screen and (max-height: 375px) and (max-width: 667px) {
+  .phone {
+    width: 15%; } }
+
+@media screen and (max-height: 360px) and (max-width: 640px) {
+  .phone {
+    width: 15%; } }
+
+@media screen and (max-height: 320px) and (max-width: 568px) {
+  .phone {
+    width: 20%; } }
+
 .questions-pos {
   margin-bottom: -40px;
   margin-top: -40px;
@@ -1376,6 +1455,18 @@ body {
 @media screen and (min-width: 1200px) {
   .questions-pos {
     width: 22%; } }
+
+@media screen and (max-height: 375px) and (max-width: 667px) {
+  .questions-pos {
+    width: 40%; } }
+
+@media screen and (max-height: 360px) and (max-width: 640px) {
+  .questions-pos {
+    width: 40%; } }
+
+@media screen and (max-height: 320px) and (max-width: 568px) {
+  .questions-pos {
+    width: 40%; } }
 
 .card-set {
   background: #0f3b63;
@@ -1681,14 +1772,10 @@ body {
 
 @media screen and (min-width: 1920px) {
   .arrow2 {
-    margin-top: 720px;
+    margin-top: 780px;
     left: 46%;
     width: 120px;
     height: 120px; } }
-
-@media screen and (min-width: 1920px) {
-  .arrow2 {
-    margin-top: 780px; } }
 
 .what-pos {
   width: 60%; }
